k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cyphershare
  labels:
    name: cyphershare
    environment: production
